name:          vdpt
version:       0.1.0.0
license:       AllRightsReserved
license-file:  LICENSE
data-files:    
author:        Daniel Díaz Carrete
maintainer:    diaz_carrete@yahoo.com
category:      Database
build-type:    Simple
cabal-version: >= 1.10
-- Synopsis:      
-- Description:   

Extra-Source-Files:
    README.md
    CHANGELOG
    LICENSE

library
    -- http://stackoverflow.com/questions/12305970/how-to-make-a-haskell-cabal-project-with-libraryexecutables-that-still-run-with
    hs-source-dirs: library
    default-language: Haskell2010
    ghc-options: -Wall -threaded 
    build-depends:
        base >= 4.7 && < 5,
        transformers >= 0.4.3.0 && < 0.5,
        bifunctors >= 4.1 && < 5,
        containers >= 0.4,
        unordered-containers >= 0.2.5.0,
        conceit >= 0.2.2.1,
        attoparsec >= 0.12.1.0,
        aeson >= 0.8.0.2,
        aeson-pretty >= 0.7.2,
        comonad >= 4.2.2,
        lens >= 4.7,
        bytestring >= 0.10.4.0,
        text >= 0.11.2 && < 1.2.1,
        diagrams >= 1.3 && < 1.4,
        scotty >= 0.9.1,
        wai-extra,
        http-types,
        network,
        lucid >= 2.9.2,
        optparse-applicative <= 0.12,
        -- https://www.fpcomplete.com/school/using-fphc/recommended-libraries
        enclosed-exceptions >= 1.0.1,
        system-filepath >= 0.4.13,
        system-fileio >= 0.3.16

    exposed-modules:
        VDPT
        VDPT.Types
        VDPT.Parser
        VDPT.Server
        VDPT.Main
    exposed: True
    buildable: True
    other-modules:
    ghc-options: -Wall

Executable vdpt
    hs-source-dirs: executable
    main-is: Main.hs
    default-language: Haskell2010
    ghc-options: -Wall -threaded 
    build-depends:         
        base >= 4.7 && < 5,
        vdpt 
